--- a/style.css
+++ b/style.css
@@ -17,8 +17,10 @@
 -------------------------------------------------------------------------------*/
 /* Let's default this puppy out
 -------------------------------------------------------------------------------*/
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=latin,latin-ext);
-@import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic);
+@import url(/js/pure-min.css);
+@import url(/js/grids-responsive-min.css);
 /* line 15, /home/celsior/pet/ssg/theme/_reset.scss */
 html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
   margin: 0;
@@ -189,73 +191,58 @@ input[type="radio"] {
   vertical-align: text-bottom;
 }
 
-/* line 98, /home/celsior/pet/ssg/theme/_reset.scss */
-input[type="checkbox"] {
-  vertical-align: bottom;
-}
-
 /* line 99, /home/celsior/pet/ssg/theme/_reset.scss */
-.ie7 input[type="checkbox"] {
-  vertical-align: baseline;
-}
-
-/* line 100, /home/celsior/pet/ssg/theme/_reset.scss */
-.ie6 input {
-  vertical-align: text-bottom;
-}
-
-/* line 102, /home/celsior/pet/ssg/theme/_reset.scss */
 select, input, textarea {
   font: inherit;
 }
 
-/* line 104, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 101, /home/celsior/pet/ssg/theme/_reset.scss */
 table {
   font-size: inherit;
   font: 100%;
 }
 
-/* line 106, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 103, /home/celsior/pet/ssg/theme/_reset.scss */
 small {
   font-size: 85%;
 }
 
-/* line 108, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 105, /home/celsior/pet/ssg/theme/_reset.scss */
 strong {
   font-weight: bold;
 }
 
-/* line 110, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 107, /home/celsior/pet/ssg/theme/_reset.scss */
 td, td img {
   vertical-align: top;
 }
 
 /* Make sure sup and sub don't mess with your line-heights https://gist.github.com/413930 */
-/* line 113, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 110, /home/celsior/pet/ssg/theme/_reset.scss */
 sub, sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
 }
 
-/* line 114, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 111, /home/celsior/pet/ssg/theme/_reset.scss */
 sup {
   top: -0.5em;
 }
 
-/* line 115, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 112, /home/celsior/pet/ssg/theme/_reset.scss */
 sub {
   bottom: -0.25em;
 }
 
 /* standardize any monospaced elements */
-/* line 118, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 115, /home/celsior/pet/ssg/theme/_reset.scss */
 pre, code, kbd, samp {
   font-family: monospace, sans-serif;
 }
 
 /* hand cursor on clickable elements */
-/* line 121, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 118, /home/celsior/pet/ssg/theme/_reset.scss */
 .clickable,
 label,
 input[type=button],
@@ -266,13 +253,13 @@ button {
 }
 
 /* Webkit browsers add a 2px margin outside the chrome of form elements */
-/* line 129, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 126, /home/celsior/pet/ssg/theme/_reset.scss */
 button, input, select, textarea {
   margin: 0;
 }
 
 /* make buttons play nice in IE */
-/* line 132, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 129, /home/celsior/pet/ssg/theme/_reset.scss */
 button,
 input[type=button] {
   width: auto;
@@ -280,7 +267,7 @@ input[type=button] {
 }
 
 /* scale images in IE7 more attractively */
-/* line 136, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 133, /home/celsior/pet/ssg/theme/_reset.scss */
 .ie7 img {
   -ms-interpolation-mode: bicubic;
 }
@@ -290,7 +277,7 @@ input[type=button] {
 .ie6 html {filter: expression(document.execCommand("BackgroundImageCache", false, true));}
 */
 /* let's clear some floats */
-/* line 144, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 141, /home/celsior/pet/ssg/theme/_reset.scss */
 .clearfix:before, .clearfix:after {
   content: "\0020";
   display: block;
@@ -298,22 +285,22 @@ input[type=button] {
   overflow: hidden;
 }
 
-/* line 145, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 142, /home/celsior/pet/ssg/theme/_reset.scss */
 .clearfix:after {
   clear: both;
 }
 
-/* line 146, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 143, /home/celsior/pet/ssg/theme/_reset.scss */
 .clearfix {
   zoom: 1;
 }
 
-/* line 148, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 145, /home/celsior/pet/ssg/theme/_reset.scss */
 b, strong {
   font-weight: bold;
 }
 
-/* line 31 */
+/* line 33 */
 html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
   margin: 0;
   padding: 0;
@@ -324,80 +311,205 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
   background: transparent;
 }
 
-/* line 41 */
+/* line 43 */
+strong {
+  font-weight: bold;
+}
+
+/* line 47 */
+em {
+  font-style: italic;
+}
+
+/* line 51 */
 ol {
   padding-inline-start: 32px;
 }
 
-/* line 45 */
+/* line 55 */
 ul {
   padding-inline-start: 32px;
   list-style-type: circle;
 }
 
-/* line 51 */
-html, body {
-  margin: 0;
-  padding: 0;
-  text-align: center;
+/* line 60 */
+p, ol, ul {
+  margin: 0px auto 16px auto;
 }
 
-/* line 57 */
+/* line 64 */
+.clearfix {
+  overflow: auto;
+}
+
+/* line 68 */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* line 76 */
+html, body {
+  padding: 0;
+  text-align: center;
+  font-family: Merriweather, freight-text-pro, Georgia, Cambria, "Times New Roman", Times, serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
+@media screen and (min-width: 35.5em) {
+  /* line 76 */
+  html, body {
+    line-height: 1.6;
+  }
+}
+
+/* line 90 */
+.pure-g {
+  font-family: unset;
+}
+/* line 93 */
+.pure-g [class*="pure-u"] {
+  font-family: unset;
+}
+
+/* line 101 */
+button, input, select, textarea, .pure-menu-link {
+  font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+}
+
+/* line 105 */
+.menu-container {
+  display: block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  max-width: 700px;
+}
+/* line 114 */
+.menu-container .menu-link-home {
+  white-space: normal;
+}
+/* line 118 */
+.menu-container input {
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+/* line 124 */
+.menu-container input:hover ~ .checkmark {
+  color: rgba(0, 0, 0, 0.8);
+}
+/* line 128 */
+.menu-container input:checked ~ .checkmark {
+  color: rgba(0, 0, 0, 0.8);
+}
+/* line 132 */
+.menu-container input:checked ~ ul {
+  display: inline;
+}
+/* line 135 */
+.menu-container input:checked ~ ul .pure-menu-item {
+  display: block;
+  height: unset;
+}
+/* line 142 */
+.menu-container .checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 32px;
+  width: 32px;
+  transform: translate(25%, 0%);
+  font-size: 46px;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+/* line 156 */
 body {
   line-height: 1.4;
   color: rgba(0, 0, 0, 0.8);
   font-weight: 300;
 }
-
-/* line 63 */
-html, button, input, select, textarea,
-.pure-g [class*="pure-u"] {
-  font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+/* line 162 */
+body nav ul {
+  padding-inline-start: unset;
+}
+@media screen and (max-width: 380px) {
+  /* line 166 */
+  body nav .menu-container {
+    display: grid;
+    grid-template-areas: "menu-sw title" "menu menu";
+    grid-template-columns: 32px auto;
+  }
+  /* line 174 */
+  body nav a {
+    grid-area: title;
+  }
+  /* line 178 */
+  body nav ul {
+    grid-area: menu;
+    display: none;
+  }
+}
+@media not screen and (max-width: 380px) {
+  /* line 185 */
+  body nav input, body nav .checkmark {
+    display: none;
+  }
 }
 
-/* line 69 */
+/* line 194 */
+.calc-form td {
+  padding: 0 10px 0 10px;
+}
+
+/* line 201 */
 .payments tr * {
   padding: 0 10px 0 10px;
   font-family: Consolas, "Deja Vu Sans Mono", "Ubuntu Mono", "Bitstream Vera Sans Mono", Monaco, "Courier New", monospace;
 }
-/* line 74 */
+/* line 206 */
 .payments tr:hover {
   background-color: lightgray;
 }
 
-/* line 79 */
+/* line 211 */
 .collapse-content {
   display: none;
 }
 
-/* line 83 */
+/* line 215 */
 .collapse-content.active {
   display: inherit;
 }
 
-/* line 87 */
+/* line 219 */
 .product-badge {
   max-width: 50%;
   height: auto;
 }
 
-/* line 92 */
+/* line 224 */
 .pure-u-1-2 {
   display: block;
 }
 
-/* line 96 */
+/* line 228 */
 .pure-menu-horizontal {
   white-space: unset;
 }
 
-/* line 100 */
+/* line 232 */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
   font-weight: normal;
 }
 
-/* line 105 */
+/* line 237 */
 h1 {
   font-size: 32px;
   line-height: 1.2;
@@ -407,27 +519,27 @@ h1 {
   text-align: center;
 }
 
-/* line 114 */
+/* line 246 */
 h2 {
   font-size: 24px;
   padding: 16px 0;
   line-height: 1.2;
 }
 
-/* line 120 */
+/* line 252 */
 h3 {
   font-size: 20px;
   padding: 8px 0;
   line-height: 1.2;
 }
 
-/* line 126 */
+/* line 258 */
 a {
   color: rgba(0, 0, 0, 0.8);
   text-decoration: underline;
 }
 
-/* line 131 */
+/* line 263 */
 hr {
   width: 50%;
   background-color: rgba(0, 0, 0, 0.1);
@@ -435,62 +547,71 @@ hr {
   border: 0;
 }
 
-/* line 139 */
-main {
+/* line 271 */
+header, main, footer {
   padding: 5px;
   font-weight: 300;
   max-width: 1000px;
   margin: 0 auto;
-  display: inline-block;
-  text-align: center;
 }
 
-/* line 148 */
+/* line 280 */
 nav {
   text-align: left;
   max-width: 1000px;
   margin: 0 auto;
 }
 
-/* line 154 */
+/* line 286 */
+.page, .posts, .pagination, .disclaimer {
+  max-width: 700px;
+}
+
+/* line 290 */
+.disclaimer {
+  width: 100%;
+  text-align: left;
+  margin-bottom: 20px;
+  background-color: #fff;
+  max-width: 700px;
+  font-size: 12px;
+  box-shadow: rgba(255, 0, 0, 0.4) 0px 1px 4px 0px;
+  border-radius: 3px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  padding: 16px 16px 0 16px;
+}
+
+/* line 306 */
 article {
   width: 100%;
   text-align: left;
   margin-bottom: 20px;
   background-color: #fff;
   max-width: 700px;
+  box-shadow: rgba(0, 0, 0, 0.04) 0px 1px 4px 0px;
+  border-radius: 3px;
+  border: 1px solid rgba(0, 0, 0, 0.09);
+  box-sizing: border-box;
+  padding: 20px;
 }
-/* line 161 */
+/* line 319 */
 article .meta {
   letter-spacing: -0.02em;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.44);
   font-style: italic;
 }
-/* line 170 */
+/* line 328 */
 article h2 a {
   text-decoration: none;
 }
-/* line 175 */
+/* line 333 */
 article .content {
-  font-family: Merriweather, freight-text-pro, Georgia, Cambria, "Times New Roman", Times, serif;
-  font-size: 16px;
   margin: 0 auto;
-  text-align: left;
-  line-height: 1.5;
-}
-@media screen and (min-width: 35.5em) {
-  /* line 175 */
-  article .content {
-    line-height: 1.6;
-  }
-}
-/* line 186 */
-article .content p {
-  margin: 16px auto;
 }
 
-/* line 193 */
+/* line 339 */
 .posts article {
   box-shadow: rgba(0, 0, 0, 0.04) 0px 1px 4px 0px;
   border-radius: 3px;
@@ -498,35 +619,24 @@ article .content p {
   box-sizing: border-box;
   padding: 20px;
 }
-/* line 200 */
+/* line 346 */
 .posts article h2 {
   font-weight: bold;
 }
-@media screen and (min-width: 64em) {
-  /* line 193 */
-  .posts article {
-    padding: 20px;
-  }
-}
 
-/* line 210 */
-.page {
-  text-align: center;
-}
-
-/* line 214 */
+/* line 352 */
 .pagination {
-  margin: 30px auto;
+  margin-bottom: 30px;
 }
-/* line 216 */
+/* line 356 */
 .pagination .left {
   text-align: left;
 }
-/* line 219 */
+/* line 359 */
 .pagination .right {
   text-align: right;
 }
-/* line 222 */
+/* line 362 */
 .pagination a {
   display: inline-block;
   padding: 5px 5px;
@@ -537,21 +647,21 @@ article .content p {
   color: rgba(0, 0, 0, 0.44);
   text-decoration: none;
 }
-/* line 233 */
+/* line 373 */
 .pagination a:hover {
   color: rgba(0, 0, 0, 0.8);
   border-color: rgba(0, 0, 0, 0.3);
   text-decoration: none;
 }
 
-/* line 246 */
+/* line 386 */
 .output::-webkit-inner-spin-button,
 .output::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-/* line 252 */
+/* line 392 */
 .output {
   -moz-appearance: textfield;
   background-color: white;
