--- a/style.css
+++ b/style.css
@@ -373,12 +373,17 @@ html, body {
   font-family: unset;
 }
 
-/* line 101 */
+/* line 98 */
+input {
+  width: 100%;
+}
+
+/* line 103 */
 button, input, select, textarea, .pure-menu-link {
   font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 }
 
-/* line 105 */
+/* line 107 */
 .menu-container {
   display: block;
   cursor: pointer;
@@ -388,35 +393,35 @@ button, input, select, textarea, .pure-menu-link {
   user-select: none;
   max-width: 700px;
 }
-/* line 114 */
+/* line 116 */
 .menu-container .menu-link-home {
   white-space: normal;
 }
-/* line 118 */
+/* line 120 */
 .menu-container input {
   opacity: 0;
   cursor: pointer;
   height: 0;
   width: 0;
 }
-/* line 124 */
+/* line 126 */
 .menu-container input:hover ~ .checkmark {
   color: rgba(0, 0, 0, 0.8);
 }
-/* line 128 */
+/* line 130 */
 .menu-container input:checked ~ .checkmark {
   color: rgba(0, 0, 0, 0.8);
 }
-/* line 132 */
+/* line 134 */
 .menu-container input:checked ~ ul {
   display: inline;
 }
-/* line 135 */
+/* line 137 */
 .menu-container input:checked ~ ul .pure-menu-item {
   display: block;
   height: unset;
 }
-/* line 142 */
+/* line 144 */
 .menu-container .checkmark {
   position: absolute;
   top: 0;
@@ -428,88 +433,97 @@ button, input, select, textarea, .pure-menu-link {
   color: rgba(0, 0, 0, 0.4);
 }
 
-/* line 156 */
+/* line 158 */
 body {
   line-height: 1.4;
   color: rgba(0, 0, 0, 0.8);
   font-weight: 300;
 }
-/* line 162 */
+/* line 164 */
 body nav ul {
   padding-inline-start: unset;
 }
 @media screen and (max-width: 380px) {
-  /* line 166 */
+  /* line 168 */
   body nav .menu-container {
     display: grid;
     grid-template-areas: "menu-sw title" "menu menu";
     grid-template-columns: 32px auto;
   }
-  /* line 174 */
+  /* line 176 */
   body nav a {
     grid-area: title;
   }
-  /* line 178 */
+  /* line 180 */
   body nav ul {
     grid-area: menu;
     display: none;
   }
 }
 @media not screen and (max-width: 380px) {
-  /* line 185 */
+  /* line 187 */
   body nav input, body nav .checkmark {
     display: none;
   }
 }
 
-/* line 194 */
+/* line 196 */
+.calc-form table {
+  table-layout: fixed;
+}
+/* line 200 */
+.calc-form tr {
+  width: 100%;
+}
+/* line 203 */
 .calc-form td {
   padding: 0 10px 0 10px;
+  width: 50%;
 }
 
-/* line 201 */
+/* line 211 */
 .payments tr * {
   padding: 0 10px 0 10px;
   font-family: Consolas, "Deja Vu Sans Mono", "Ubuntu Mono", "Bitstream Vera Sans Mono", Monaco, "Courier New", monospace;
 }
-/* line 206 */
+/* line 216 */
 .payments tr:hover {
   background-color: lightgray;
 }
 
-/* line 211 */
+/* line 221 */
 .collapse-content {
   display: none;
 }
 
-/* line 215 */
+/* line 225 */
 .collapse-content.active {
   display: inherit;
 }
 
-/* line 219 */
+/* line 229 */
 .product-badge {
   max-width: 50%;
   height: auto;
 }
 
-/* line 224 */
+/* line 234 */
 .pure-u-1-2 {
   display: block;
 }
 
-/* line 228 */
+/* line 238 */
 .pure-menu-horizontal {
   white-space: unset;
 }
 
-/* line 232 */
+/* line 242 */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
   font-weight: normal;
 }
 
-/* line 237 */
+/* line 247 */
 h1 {
   font-size: 32px;
   line-height: 1.2;
@@ -519,27 +533,27 @@ h1 {
   text-align: center;
 }
 
-/* line 246 */
+/* line 256 */
 h2 {
   font-size: 24px;
   padding: 16px 0;
   line-height: 1.2;
 }
 
-/* line 252 */
+/* line 262 */
 h3 {
   font-size: 20px;
   padding: 8px 0;
   line-height: 1.2;
 }
 
-/* line 258 */
+/* line 268 */
 a {
   color: rgba(0, 0, 0, 0.8);
   text-decoration: underline;
 }
 
-/* line 263 */
+/* line 273 */
 hr {
   width: 50%;
   background-color: rgba(0, 0, 0, 0.1);
@@ -547,7 +561,7 @@ hr {
   border: 0;
 }
 
-/* line 271 */
+/* line 281 */
 header, main, footer {
   padding: 5px;
   font-weight: 300;
@@ -555,19 +569,19 @@ header, main, footer {
   margin: 0 auto;
 }
 
-/* line 280 */
+/* line 290 */
 nav {
   text-align: left;
   max-width: 1000px;
   margin: 0 auto;
 }
 
-/* line 286 */
+/* line 296 */
 .page, .posts, .pagination, .disclaimer {
   max-width: 700px;
 }
 
-/* line 290 */
+/* line 300 */
 .disclaimer {
   width: 100%;
   text-align: left;
@@ -582,7 +596,7 @@ nav {
   padding: 16px 16px 0 16px;
 }
 
-/* line 306 */
+/* line 316 */
 article {
   width: 100%;
   text-align: left;
@@ -595,23 +609,23 @@ article {
   box-sizing: border-box;
   padding: 20px;
 }
-/* line 319 */
+/* line 329 */
 article .meta {
   letter-spacing: -0.02em;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.44);
   font-style: italic;
 }
-/* line 328 */
+/* line 338 */
 article h2 a {
   text-decoration: none;
 }
-/* line 333 */
+/* line 343 */
 article .content {
   margin: 0 auto;
 }
 
-/* line 339 */
+/* line 349 */
 .posts article {
   box-shadow: rgba(0, 0, 0, 0.04) 0px 1px 4px 0px;
   border-radius: 3px;
@@ -619,24 +633,24 @@ article .content {
   box-sizing: border-box;
   padding: 20px;
 }
-/* line 346 */
+/* line 356 */
 .posts article h2 {
   font-weight: bold;
 }
 
-/* line 352 */
+/* line 362 */
 .pagination {
   margin-bottom: 30px;
 }
-/* line 356 */
+/* line 366 */
 .pagination .left {
   text-align: left;
 }
-/* line 359 */
+/* line 369 */
 .pagination .right {
   text-align: right;
 }
-/* line 362 */
+/* line 372 */
 .pagination a {
   display: inline-block;
   padding: 5px 5px;
@@ -647,21 +661,21 @@ article .content {
   color: rgba(0, 0, 0, 0.44);
   text-decoration: none;
 }
-/* line 373 */
+/* line 383 */
 .pagination a:hover {
   color: rgba(0, 0, 0, 0.8);
   border-color: rgba(0, 0, 0, 0.3);
   text-decoration: none;
 }
 
-/* line 386 */
+/* line 396 */
 .output::-webkit-inner-spin-button,
 .output::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-/* line 392 */
+/* line 402 */
 .output {
   -moz-appearance: textfield;
   background-color: white;
