--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic);
 @import url(/js/pure-min.css);
 @import url(/js/grids-responsive-min.css);
-/* line 15, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 15, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
   margin: 0;
   padding: 0;
@@ -32,19 +32,19 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
   background: transparent;
 }
 
-/* line 25, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 25, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 article, aside, figure, footer, header, nav, section, details, summary {
   display: block;
 }
 
 /* Handle box-sizing while better addressing child elements:
    https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
-/* line 29, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 29, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 html {
   box-sizing: border-box;
 }
 
-/* line 33, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 33, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 *,
 *:before,
 *:after {
@@ -54,7 +54,7 @@ html {
 /* consider resetting the default cursor: https://gist.github.com/murtaugh/5247154 */
 /* Responsive images and other embedded objects
 */
-/* line 43, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 43, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 img,
 object,
 embed {
@@ -71,24 +71,24 @@ embed {
 }
 */
 /* force a vertical scrollbar to prevent a jumpy page */
-/* line 58, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 58, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 html {
   overflow-y: scroll;
 }
 
 /* we use a lot of ULs that aren't bulleted.
 	don't forget to restore the bullets within content. */
-/* line 62, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 62, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 ul {
   list-style: none;
 }
 
-/* line 64, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 64, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 blockquote, q {
   quotes: none;
 }
 
-/* line 66, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 66, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 blockquote:before,
 blockquote:after,
 q:before,
@@ -97,7 +97,7 @@ q:after {
   content: none;
 }
 
-/* line 71, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 71, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 a {
   margin: 0;
   padding: 0;
@@ -107,57 +107,57 @@ a {
   text-decoration: none;
 }
 
-/* line 72, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 72, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 a:link {
   color: inherit;
 }
 
-/* line 73, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 73, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 a:visited {
   color: inherit;
 }
 
-/* line 74, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 74, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 a:hover {
   color: inherit;
 }
 
-/* line 75, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 75, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 a:active {
   color: inherit;
 }
 
-/* line 77, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 77, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 del {
   text-decoration: line-through;
 }
 
-/* line 79, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 79, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 abbr[title], dfn[title] {
   border-bottom: 1px dotted #000;
   cursor: help;
 }
 
 /* tables still need cellspacing="0" in the markup */
-/* line 82, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 82, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 83, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 83, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 th {
   font-weight: bold;
   vertical-align: bottom;
 }
 
-/* line 84, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 84, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 td {
   font-weight: normal;
   vertical-align: top;
 }
 
-/* line 86, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 86, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 hr {
   display: block;
   width: 100%;
@@ -169,12 +169,12 @@ hr {
   flex: 0 0 auto;
 }
 
-/* line 88, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 88, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 input, select {
   vertical-align: middle;
 }
 
-/* line 90, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 90, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 pre {
   white-space: pre;
   /* CSS2 */
@@ -186,63 +186,63 @@ pre {
   /* IE */
 }
 
-/* line 97, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 97, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 input[type="radio"] {
   vertical-align: text-bottom;
 }
 
-/* line 99, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 99, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 select, input, textarea {
   font: inherit;
 }
 
-/* line 101, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 101, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 table {
   font-size: inherit;
   font: 100%;
 }
 
-/* line 103, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 103, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 small {
   font-size: 85%;
 }
 
-/* line 105, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 105, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 strong {
   font-weight: bold;
 }
 
-/* line 107, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 107, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 td, td img {
   vertical-align: top;
 }
 
 /* Make sure sup and sub don't mess with your line-heights https://gist.github.com/413930 */
-/* line 110, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 110, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 sub, sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
 }
 
-/* line 111, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 111, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 sup {
   top: -0.5em;
 }
 
-/* line 112, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 112, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 sub {
   bottom: -0.25em;
 }
 
 /* standardize any monospaced elements */
-/* line 115, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 115, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 pre, code, kbd, samp {
   font-family: monospace, sans-serif;
 }
 
 /* hand cursor on clickable elements */
-/* line 118, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 118, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 .clickable,
 label,
 input[type=button],
@@ -253,13 +253,13 @@ button {
 }
 
 /* Webkit browsers add a 2px margin outside the chrome of form elements */
-/* line 126, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 126, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 button, input, select, textarea {
   margin: 0;
 }
 
 /* make buttons play nice in IE */
-/* line 129, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 129, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 button,
 input[type=button] {
   width: auto;
@@ -267,7 +267,7 @@ input[type=button] {
 }
 
 /* scale images in IE7 more attractively */
-/* line 133, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 133, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 .ie7 img {
   -ms-interpolation-mode: bicubic;
 }
@@ -277,7 +277,7 @@ input[type=button] {
 .ie6 html {filter: expression(document.execCommand("BackgroundImageCache", false, true));}
 */
 /* let's clear some floats */
-/* line 141, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 141, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 .clearfix:before, .clearfix:after {
   content: "\0020";
   display: block;
@@ -285,17 +285,17 @@ input[type=button] {
   overflow: hidden;
 }
 
-/* line 142, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 142, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 .clearfix:after {
   clear: both;
 }
 
-/* line 143, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 143, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 .clearfix {
   zoom: 1;
 }
 
-/* line 145, /home/celsior/pet/ssg/theme/_reset.scss */
+/* line 145, /home/celsior/pet/ssg/content/_theme/_reset.scss */
 b, strong {
   font-weight: bold;
 }
@@ -349,7 +349,20 @@ p, ol, ul {
   display: table;
 }
 
-/* line 76 */
+/* line 74 */
+mjx-container[jax="CHTML"] {
+  font-weight: 700;
+  margin: unset !important;
+  font-size: 110%;
+}
+
+/* line 80 */
+mjx-container[jax="CHTML"][display="true"] {
+  font-size: 130%;
+  font-weight: normal;
+}
+
+/* line 86 */
 html, body {
   padding: 0;
   text-align: center;
@@ -358,32 +371,32 @@ html, body {
   line-height: 1.5;
 }
 @media screen and (min-width: 35.5em) {
-  /* line 76 */
+  /* line 86 */
   html, body {
     line-height: 1.6;
   }
 }
 
-/* line 90 */
+/* line 100 */
 .pure-g {
   font-family: unset;
 }
-/* line 93 */
+/* line 103 */
 .pure-g [class*="pure-u"] {
   font-family: unset;
 }
 
-/* line 98 */
+/* line 108 */
 input {
   width: 100%;
 }
 
-/* line 103 */
+/* line 113 */
 button, input, select, textarea, .pure-menu-link {
   font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 }
 
-/* line 107 */
+/* line 117 */
 .menu-container {
   display: block;
   cursor: pointer;
@@ -393,35 +406,35 @@ button, input, select, textarea, .pure-menu-link {
   user-select: none;
   max-width: 700px;
 }
-/* line 116 */
+/* line 126 */
 .menu-container .menu-link-home {
   white-space: normal;
 }
-/* line 120 */
+/* line 130 */
 .menu-container input {
   opacity: 0;
   cursor: pointer;
   height: 0;
   width: 0;
 }
-/* line 126 */
+/* line 136 */
 .menu-container input:hover ~ .checkmark {
   color: rgba(0, 0, 0, 0.8);
 }
-/* line 130 */
+/* line 140 */
 .menu-container input:checked ~ .checkmark {
   color: rgba(0, 0, 0, 0.8);
 }
-/* line 134 */
+/* line 144 */
 .menu-container input:checked ~ ul {
   display: inline;
 }
-/* line 137 */
+/* line 147 */
 .menu-container input:checked ~ ul .pure-menu-item {
   display: block;
   height: unset;
 }
-/* line 144 */
+/* line 154 */
 .menu-container .checkmark {
   position: absolute;
   top: 0;
@@ -433,97 +446,97 @@ button, input, select, textarea, .pure-menu-link {
   color: rgba(0, 0, 0, 0.4);
 }
 
-/* line 158 */
+/* line 168 */
 body {
   line-height: 1.4;
   color: rgba(0, 0, 0, 0.8);
   font-weight: 300;
 }
-/* line 164 */
+/* line 174 */
 body nav ul {
   padding-inline-start: unset;
 }
 @media screen and (max-width: 380px) {
-  /* line 168 */
+  /* line 178 */
   body nav .menu-container {
     display: grid;
     grid-template-areas: "menu-sw title" "menu menu";
     grid-template-columns: 32px auto;
   }
-  /* line 176 */
+  /* line 186 */
   body nav a {
     grid-area: title;
   }
-  /* line 180 */
+  /* line 190 */
   body nav ul {
     grid-area: menu;
     display: none;
   }
 }
 @media not screen and (max-width: 380px) {
-  /* line 187 */
+  /* line 197 */
   body nav input, body nav .checkmark {
     display: none;
   }
 }
 
-/* line 196 */
+/* line 206 */
 .calc-form table {
   table-layout: fixed;
 }
-/* line 200 */
+/* line 210 */
 .calc-form tr {
   width: 100%;
 }
-/* line 203 */
+/* line 213 */
 .calc-form td {
   padding: 0 10px 0 10px;
   width: 50%;
 }
 
-/* line 211 */
+/* line 221 */
 .payments tr * {
   padding: 0 10px 0 10px;
   font-family: Consolas, "Deja Vu Sans Mono", "Ubuntu Mono", "Bitstream Vera Sans Mono", Monaco, "Courier New", monospace;
 }
-/* line 216 */
+/* line 226 */
 .payments tr:hover {
   background-color: lightgray;
 }
 
-/* line 221 */
+/* line 231 */
 .collapse-content {
   display: none;
 }
 
-/* line 225 */
+/* line 235 */
 .collapse-content.active {
   display: inherit;
 }
 
-/* line 229 */
+/* line 239 */
 .product-badge {
   max-width: 50%;
   height: auto;
 }
 
-/* line 234 */
+/* line 244 */
 .pure-u-1-2 {
   display: block;
 }
 
-/* line 238 */
+/* line 248 */
 .pure-menu-horizontal {
   white-space: unset;
 }
 
-/* line 242 */
+/* line 252 */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
   font-weight: normal;
 }
 
-/* line 247 */
+/* line 257 */
 h1 {
   font-size: 32px;
   line-height: 1.2;
@@ -533,27 +546,27 @@ h1 {
   text-align: center;
 }
 
-/* line 256 */
+/* line 266 */
 h2 {
   font-size: 24px;
   padding: 16px 0;
   line-height: 1.2;
 }
 
-/* line 262 */
+/* line 272 */
 h3 {
   font-size: 20px;
   padding: 8px 0;
   line-height: 1.2;
 }
 
-/* line 268 */
+/* line 278 */
 a {
   color: rgba(0, 0, 0, 0.8);
   text-decoration: underline;
 }
 
-/* line 273 */
+/* line 283 */
 hr {
   width: 50%;
   background-color: rgba(0, 0, 0, 0.1);
@@ -561,7 +574,7 @@ hr {
   border: 0;
 }
 
-/* line 281 */
+/* line 291 */
 header, main, footer {
   padding: 5px;
   font-weight: 300;
@@ -569,19 +582,19 @@ header, main, footer {
   margin: 0 auto;
 }
 
-/* line 290 */
+/* line 300 */
 nav {
   text-align: left;
   max-width: 1000px;
   margin: 0 auto;
 }
 
-/* line 296 */
+/* line 306 */
 .page, .posts, .pagination, .disclaimer {
   max-width: 700px;
 }
 
-/* line 300 */
+/* line 310 */
 .disclaimer {
   width: 100%;
   text-align: left;
@@ -596,7 +609,7 @@ nav {
   padding: 16px 16px 0 16px;
 }
 
-/* line 316 */
+/* line 326 */
 article {
   width: 100%;
   text-align: left;
@@ -609,23 +622,23 @@ article {
   box-sizing: border-box;
   padding: 20px;
 }
-/* line 329 */
+/* line 339 */
 article .meta {
   letter-spacing: -0.02em;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.44);
   font-style: italic;
 }
-/* line 338 */
+/* line 348 */
 article h2 a {
   text-decoration: none;
 }
-/* line 343 */
+/* line 353 */
 article .content {
   margin: 0 auto;
 }
 
-/* line 349 */
+/* line 359 */
 .posts article {
   box-shadow: rgba(0, 0, 0, 0.04) 0px 1px 4px 0px;
   border-radius: 3px;
@@ -633,24 +646,24 @@ article .content {
   box-sizing: border-box;
   padding: 20px;
 }
-/* line 356 */
+/* line 366 */
 .posts article h2 {
   font-weight: bold;
 }
 
-/* line 362 */
+/* line 372 */
 .pagination {
   margin-bottom: 30px;
 }
-/* line 366 */
+/* line 375 */
 .pagination .left {
   text-align: left;
 }
-/* line 369 */
+/* line 378 */
 .pagination .right {
   text-align: right;
 }
-/* line 372 */
+/* line 381 */
 .pagination a {
   display: inline-block;
   padding: 5px 5px;
@@ -661,21 +674,21 @@ article .content {
   color: rgba(0, 0, 0, 0.44);
   text-decoration: none;
 }
-/* line 383 */
+/* line 391 */
 .pagination a:hover {
   color: rgba(0, 0, 0, 0.8);
   border-color: rgba(0, 0, 0, 0.3);
   text-decoration: none;
 }
 
-/* line 396 */
+/* line 399 */
 .output::-webkit-inner-spin-button,
 .output::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-/* line 402 */
+/* line 405 */
 .output {
   -moz-appearance: textfield;
   background-color: white;
