--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@
 -------------------------------------------------------------------------------*/
 /* Let's default this puppy out
 -------------------------------------------------------------------------------*/
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,700);
-@import url(https://fonts.googleapis.com/css?family=Merriweather:300,300italic);
 @import url(/js/pure-min.css);
 @import url(/js/grids-responsive-min.css);
 /* line 15, /home/celsior/pet/ssg/content/_theme/_reset.scss */
@@ -299,7 +297,7 @@ b, strong {
   font-weight: 400;
   src: url(/images/share.woff) format("woff");
 }
-/* line 31 */
+/* line 28 */
 i.share {
   font-family: 'ShareIcons' !important;
   speak: none;
@@ -312,21 +310,30 @@ i.share {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* line 44 */
+/* line 41 */
 .share-buttons {
   text-align: right;
 }
-/* line 46 */
+/* line 43 */
 .share-buttons a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.44);
 }
-/* line 50 */
+/* line 47 */
 .share-buttons a:hover {
   color: rgba(0, 0, 0, 0.8);
 }
 
-/* line 57 */
+/* line 55 */
+.pure-g {
+  font-family: inherit;
+}
+/* line 58 */
+.pure-g [class*="pure-u"] {
+  font-family: inherit;
+}
+
+/* line 64 */
 html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
   margin: 0;
   padding: 0;
@@ -337,115 +344,106 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
   background: transparent;
 }
 
-/* line 67 */
+/* line 74 */
 abbr[title] {
   border-bottom: none;
 }
 
-/* line 71 */
+/* line 78 */
 strong {
   font-weight: bold;
 }
 
-/* line 75 */
+/* line 82 */
 em {
   font-style: italic;
 }
 
-/* line 79 */
+/* line 86 */
 strong em, em strong {
   font-weight: bold;
   font-style: italic;
 }
 
-/* line 86 */
+/* line 93 */
 ol {
   padding-inline-start: 32px;
 }
 
-/* line 90 */
+/* line 97 */
 ul {
   padding-inline-start: 32px;
   list-style-type: circle;
 }
 
-/* line 95 */
+/* line 102 */
 p, ol, ul, table, pre {
   margin: 0px auto 16px auto;
 }
 
-/* line 99 */
+/* line 106 */
 ul ul {
   margin: unset;
 }
 
-/* line 103 */
+/* line 110 */
 .clearfix {
   overflow: auto;
 }
 
-/* line 107 */
+/* line 114 */
 .clearfix::after {
   content: "";
   clear: both;
   display: table;
 }
 
-/* line 113 */
+/* line 120 */
 mjx-container[jax="CHTML"] {
   font-weight: 700;
   margin: unset !important;
   font-size: 110%;
 }
 
-/* line 119 */
+/* line 126 */
 mjx-container[jax="CHTML"][display="true"] {
   font-size: 130%;
   font-weight: normal;
 }
 
-/* line 125 */
+/* line 132 */
 html, body {
   padding: 0;
   text-align: center;
-  font-family: Merriweather, freight-text-pro, Georgia, Cambria, "Times New Roman", Times, serif;
-  font-size: 16px;
-  line-height: 1.5;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 18px;
+  line-height: 1.6;
 }
 @media screen and (min-width: 35.5em) {
-  /* line 125 */
+  /* line 132 */
   html, body {
     line-height: 1.6;
   }
 }
 
-/* line 138 */
+/* line 145 */
 blockquote {
   border-left: 4px rgba(0, 0, 0, 0.4) solid;
   padding: 5px;
   margin-top: 0;
 }
 
-/* line 144 */
-.pure-g {
-  font-family: unset;
-}
-/* line 147 */
-.pure-g [class*="pure-u"] {
-  font-family: unset;
-}
-
-/* line 152 */
+/* line 151 */
 input {
   width: 100%;
 }
 
-/* line 157 */
+/* line 156 */
 button, input, select, textarea, .pure-menu-link {
-  font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+  font-family: Arial, sans-serif;
 }
 
-/* line 161 */
+/* line 160 */
 .menu-container {
   display: block;
   cursor: pointer;
@@ -455,50 +453,50 @@ button, input, select, textarea, .pure-menu-link {
   user-select: none;
   max-width: 700px;
 }
-/* line 170 */
+/* line 169 */
 .menu-container .menu-head {
   display: flex;
 }
-/* line 173 */
+/* line 172 */
 .menu-container .menu-head .social {
   display: flex;
   align-items: center;
   font-size: 120%;
 }
-/* line 178 */
+/* line 177 */
 .menu-container .menu-head .social .pure-menu-link {
   padding: 0em 0.2em;
 }
-/* line 183 */
+/* line 182 */
 .menu-container .menu-head .menu-link-home {
   white-space: normal;
   flex-basis: 100%;
 }
-/* line 191 */
+/* line 190 */
 .menu-container input {
   opacity: 0;
   cursor: pointer;
   height: 0;
   width: 0;
 }
-/* line 197 */
+/* line 196 */
 .menu-container input:hover ~ .checkmark {
   color: rgba(0, 0, 0, 0.8);
 }
-/* line 201 */
+/* line 200 */
 .menu-container input:checked ~ .checkmark {
   color: rgba(0, 0, 0, 0.8);
 }
-/* line 205 */
+/* line 204 */
 .menu-container input:checked ~ ul {
   display: inline;
 }
-/* line 208 */
+/* line 207 */
 .menu-container input:checked ~ ul .pure-menu-item {
   display: block;
   height: unset;
 }
-/* line 215 */
+/* line 214 */
 .menu-container .checkmark {
   position: absolute;
   top: 0;
@@ -510,97 +508,97 @@ button, input, select, textarea, .pure-menu-link {
   color: rgba(0, 0, 0, 0.4);
 }
 
-/* line 229 */
+/* line 228 */
 body {
   line-height: 1.4;
   color: rgba(0, 0, 0, 0.8);
   font-weight: 300;
 }
-/* line 235 */
+/* line 234 */
 body nav ul {
   padding-inline-start: unset;
 }
 @media screen and (max-width: 380px) {
-  /* line 239 */
+  /* line 238 */
   body nav .menu-container {
     display: grid;
     grid-template-areas: "menu-sw title" "menu menu";
     grid-template-columns: 32px auto;
   }
-  /* line 247 */
+  /* line 246 */
   body nav .menu-head {
     grid-area: title;
   }
-  /* line 251 */
+  /* line 250 */
   body nav ul {
     grid-area: menu;
     display: none;
   }
 }
 @media not screen and (max-width: 380px) {
-  /* line 258 */
+  /* line 257 */
   body nav input, body nav .checkmark {
     display: none;
   }
 }
 
-/* line 267 */
+/* line 266 */
 .calc-form table {
   table-layout: fixed;
 }
-/* line 271 */
+/* line 270 */
 .calc-form tr {
   width: 100%;
 }
-/* line 274 */
+/* line 273 */
 .calc-form td {
   padding: 0 10px 0 10px;
   width: 50%;
 }
 
-/* line 282 */
+/* line 281 */
 .payments tr * {
   padding: 0 10px 0 10px;
-  font-family: Consolas, "Deja Vu Sans Mono", "Ubuntu Mono", "Bitstream Vera Sans Mono", Monaco, "Courier New", monospace;
+  font-family: "Courier New", Courier, monospace;
 }
-/* line 287 */
+/* line 286 */
 .payments tr:hover {
   background-color: lightgray;
 }
 
-/* line 292 */
+/* line 291 */
 .collapse-content {
   display: none;
 }
 
-/* line 296 */
+/* line 295 */
 .collapse-content.active {
   display: inherit;
 }
 
-/* line 300 */
+/* line 299 */
 .product-badge {
   max-width: 50%;
   height: auto;
 }
 
-/* line 305 */
+/* line 304 */
 .pure-u-1-2 {
   display: block;
 }
 
-/* line 309 */
+/* line 308 */
 .pure-menu-horizontal {
   white-space: unset;
 }
 
-/* line 313 */
+/* line 312 */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+  font-family: Arial, sans-serif;
   font-weight: normal;
 }
 
-/* line 318 */
+/* line 317 */
 h1 {
   font-size: 32px;
   line-height: 1.2;
@@ -610,27 +608,27 @@ h1 {
   text-align: center;
 }
 
-/* line 327 */
+/* line 326 */
 h2 {
   font-size: 24px;
   padding: 16px 0;
   line-height: 1.2;
 }
 
-/* line 333 */
+/* line 332 */
 h3 {
   font-size: 20px;
   padding: 8px 0;
   line-height: 1.2;
 }
 
-/* line 339 */
+/* line 338 */
 a {
   color: rgba(0, 0, 0, 0.8);
   text-decoration: underline;
 }
 
-/* line 344 */
+/* line 343 */
 hr {
   width: 50%;
   background-color: rgba(0, 0, 0, 0.1);
@@ -638,7 +636,7 @@ hr {
   border: 0;
 }
 
-/* line 352 */
+/* line 351 */
 header, main, footer {
   padding: 5px;
   font-weight: 300;
@@ -646,19 +644,19 @@ header, main, footer {
   margin: 0 auto;
 }
 
-/* line 361 */
+/* line 360 */
 nav {
   text-align: left;
   max-width: 1000px;
   margin: 0 auto;
 }
 
-/* line 367 */
+/* line 366 */
 .page, .posts, .pagination, .disclaimer {
   max-width: 700px;
 }
 
-/* line 371 */
+/* line 370 */
 .disclaimer {
   width: 100%;
   text-align: left;
@@ -673,7 +671,7 @@ nav {
   padding: 16px 16px 0 16px;
 }
 
-/* line 387 */
+/* line 386 */
 article {
   width: 100%;
   text-align: left;
@@ -686,27 +684,27 @@ article {
   box-sizing: border-box;
   padding: 20px;
 }
-/* line 400 */
+/* line 399 */
 article header {
   padding: unset;
 }
-/* line 404 */
+/* line 403 */
 article .meta {
   letter-spacing: -0.02em;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.44);
   font-style: italic;
 }
-/* line 413 */
+/* line 412 */
 article h2 a {
   text-decoration: none;
 }
-/* line 418 */
+/* line 417 */
 article .content {
   margin: 0 auto;
 }
 
-/* line 424 */
+/* line 423 */
 .posts article {
   box-shadow: rgba(0, 0, 0, 0.04) 0px 1px 4px 0px;
   border-radius: 3px;
@@ -714,7 +712,7 @@ article .content {
   box-sizing: border-box;
   padding: 20px;
 }
-/* line 431 */
+/* line 430 */
 .posts article h1 {
   font-size: 32px;
   line-height: 1.2;
@@ -723,31 +721,31 @@ article .content {
   margin: 0 auto;
   text-align: left;
 }
-/* line 439 */
+/* line 438 */
 .posts article h1 a {
   text-decoration: none;
 }
 
-/* line 451 */
+/* line 450 */
 .wide-content > table {
   width: 100%;
   float: right;
   table-layout: fixed;
 }
 
-/* line 458 */
+/* line 457 */
 .pagination {
   margin-bottom: 30px;
 }
-/* line 461 */
+/* line 460 */
 .pagination .left {
   text-align: left;
 }
-/* line 464 */
+/* line 463 */
 .pagination .right {
   text-align: right;
 }
-/* line 467 */
+/* line 466 */
 .pagination a {
   display: inline-block;
   padding: 5px 5px;
@@ -757,21 +755,21 @@ article .content {
   color: rgba(0, 0, 0, 0.44);
   text-decoration: none;
 }
-/* line 477 */
+/* line 476 */
 .pagination a:hover {
   color: rgba(0, 0, 0, 0.8);
   border-color: rgba(0, 0, 0, 0.3);
   text-decoration: none;
 }
 
-/* line 485 */
+/* line 484 */
 .output::-webkit-inner-spin-button,
 .output::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-/* line 491 */
+/* line 490 */
 .output {
   -moz-appearance: textfield;
   background-color: white;
